--- a/composer.json
+++ b/composer.json
@@ -9,4 +9,9 @@
     ],
     "minimum-stability": "dev",
     "require": {}
+    "autoload": {
+        "psr-4": {
+            "anart\\forum\\": ""
+        }
+    }
 }
